--- a/main.css
+++ b/main.css
@@ -11,19 +11,19 @@ html, body {
     height: 100%;
     overflow: hidden;
 }
-h3, #controls, p {
-    padding: 5px;
+h3, .panel, p{
+    margin-left: 10px;
 }
 #left {
     background-color: #2c2c2c;
     float: left;
-    width: 20%;
+    width: 25%;
     height: 100%;
     overflow: auto;
 }
 #right {
     float: right;
-    width: 80%;
+    width: 75%;
     height: 100%;
 }
 #three {
@@ -43,4 +43,31 @@ a:visited, a:link{
 }
 #gridSnapDistance, #scale, #angledelta, #sphereradius, #hsegments, #vsegments, #cylinderradius, #cylinderheight {
     width: 50px;
+}
+
+
+/* Style the buttons that are used to open and close the accordion panel */
+.accordion {
+    background-color: #444;
+    color: #ccc;
+    cursor: pointer;
+    padding: 18px;
+    width: 100%;
+    text-align: left;
+    border: none;
+    outline: none;
+    transition: 0.4s;
+}
+
+/* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
+.active, .accordion:hover {
+    background-color: #333;
+}
+
+/* Style the accordion panel. Note: hidden by default */
+.panel {
+    padding: 0 18px;
+    background-color: #2c2c2c;
+    display: none;
+    overflow: hidden;
 }
