--- a/main.css
+++ b/main.css
@@ -41,7 +41,7 @@ a:visited, a:link{
     border: 1px solid white;
     display: none;
 }
-#gridSnapDistance, #scale, #angledelta, #sphereradius, #hsegments, #vsegments, #cylinderradius, #cylinderheight {
+input[type='number'], #gridSnapDistance {
     width: 50px;
 }
 
@@ -61,7 +61,7 @@ a:visited, a:link{
 
 /* Add a background color to the button if it is clicked on (add the .active class with JS), and when you move the mouse over it (hover) */
 .active, .accordion:hover {
-    background-color: #333;
+    background-color: #555;
 }
 
 /* Style the accordion panel. Note: hidden by default */
